architecture/inital-config/express-router-demo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: express-router-demo-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: express-router-demo
  template:
    metadata:
      labels:
        app: express-router-demo
    spec:
      containers:
        - name: express-router-demo
          image: janoopsi/express-router-demo
          ports:
            - containerPort: 5065

---

apiVersion: v1
kind: Service
metadata:
  name: express-router-demo-service
spec:
  selector:
    app: express-router-demo
  ports:
    - protocol: TCP
      port: 5065
      targetPort: 5065
  type: LoadBalancer
