architecture/inital-config/express-router.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: express-router-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: express-router
  template:
    metadata:
      labels:
        app: express-router
    spec:
      containers:
        - name: express-router
          image: janoopsi/express-router
          ports:
            - containerPort: 5055

---

apiVersion: v1
kind: Service
metadata:
  name: express-router-service
spec:
  selector:
    app: express-router
  ports:
    - protocol: TCP
      port: 5055
      targetPort: 5055
  type: LoadBalancer
